# melobot-protocol-qq

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
docs/: make.py  manual_make.py
